css/layout.css
/* ... */
		#addCriteria label {
			display: none;
		}
	#sitetree_ul, ul#sitetree {
		padding: 3px 0 0 3px;
		clear: left;
	}
	#sitetree_ul ul#sitetree {
		padding: 0;
	}
	#sitetree {
		width: 500px; /* IE's chocking right now */
	}
		html>body #sitetree {
			width: auto;
		}
		#left #TreeActions,
		#left .checkboxAboveTree {
			background: #EEE;
			padding: 5px;
			float: left;
			width: 95%;
		}
		#left .checkboxAboveTree {
			border-bottom: 1px solid #CCC;
		}
			#left .checkboxAboveTree div {
				clear: both;
			}
#TreeTools label {
	display: block;
	padding-top: 2px;
	_padding-top: 4px;
}

#TreeTools #batchactionsforms {
	padding: 0 5px 7px 5px;
}

		#TreeTools div p, #ShowChanged {
			margin: 0 0 5px 0;
			float: left;
		}
		#ShowChanged {
			width: 100%;
		}
			#TreeTools div.middleColumn {
				margin: 0;
			}
		#TreeTools #action_publish_selected, 
		#TreeTools #action_publish_selected {
			padding: 2px 1px;
			float: left;
		}
	
div.spacer, 
li.spacer {
	float: none;
	clear: both;
	background-color: transparent;
	border-style: none;
	margin: -1px 0 0 0;
	height: 1px;
	font-size: 1px;
	width: auto;
}
/** RIGHT PANEL **/
.mceToolbarExternal {
	background-color: #eee;
	display: block;
}
	.mceToolbarExternal a {
		text-decoration: none;
		border: 0 !important;
	}
		.mceToolbarExternal a img {
			border: none;
		}

#right form#Form_EditorToolbarLinkForm,
#right form#Form_EditorToolbarImageForm,
#right form#Form_EditorToolbarFlashForm {
	background: #eee;
	border-bottom: 1px solid #ccc;
	display: none;
	margin: 1px 0 0 0;
	padding: 5px;
	/*
	 * HACK IE (all versions): container needs to be higher stacking order
	 * than any DOM-elemnt under it.
	 * @see http://www.aplus.co.yu/lab/z-pos/
	 */
	/*overflow: hidden;*/
	z-index: 1001;
}


#right form#Form_EditorToolbarLinkForm ul.optionset {
	height: 1em;
}

#right form#Form_EditorToolbarLinkForm ul.optionset li {
	float: left;
}

.thumbnailstrip {
	overflow: auto;
	white-space: nowrap;
	width: 100%;
	float: left;
	border: 1px solid #aaa;
}

.thumbnailstrip li {
	float: left;
	margin-right: 4px;
}

/* CMS specific icons for the tree */
ul.tree li.Root span.Root span.c a {
	background: url(../../cms/images/treeicons/root.png) no-repeat !important;
}

/* Misc Styling */
iframe {
	border: none;
}
/* Content Panel Design
 * This is our new right hand pane for inserting images and links etc
 */
#contentPanel {
	background-color: #fff;
	width: 205px;
	position: absolute;
	border: 1px solid #ACBBCC;
	top: 45px;
	padding: 0;
	margin-right: 10px;
	overflow: hidden;
	font-size: 12px;
}

#contentPanel div,
#contentPanel p#TargetBlank {
	margin-left: 0;
}
#contentPanel div.TreeDropdownField {
	width: 180px;
}
#contentPanel div.TreeDropdownField span.items {
	width: 155px;
	background: #fff;
	font-size: 12px;
	border:1px solid #A7A7A7;
	border-right: none;
	overflow: hidden;
}
#contentPanel .thumbnailstrip {
	border: none;
	width: 190px;
	height: 120px;
	overflow-y: auto;	
	margin-right: 0 !important;
}

#contentPanel fieldset {
	padding: 5px;
}
#contentPanel h2 {
	margin: -5px -5px 0 -5px;
}
	#contentPanel .thumbnailstrip h2 {
		font-size: 1.1em;
		margin: 0;
		background: none;
		color: #555;
		height: auto;
	}
#contentPanel select {
	width: 186px;
	padding: 1px 0;
	font-size: 12px;
}
#contentPanel option {
	font-size: 12px;
}
#contentPanel .middleColumn {
	background:#E9E9E9 none repeat scroll 0%;
	display:block;
	padding:3px;
	width:98%;
}
#contentPanel input.text {
	border:1px solid #A7A7A7;
	padding:3px;
	width: 179px;
}
#contentPanel #Dimensions div.middleColumn {
	background: none;
}
/* Image height and width inputs. We need to position them in the right places */
#contentPanel input#Form_EditorToolbarImageForm_Width,
#contentPanel input#Form_EditorToolbarFlashForm_Width {
	width: 30px;
}
#contentPanel input#Form_EditorToolbarImageForm_Height,
#contentPanel input#Form_EditorToolbarFlashForm_Height {
	width: 30px;
}
#Form_EditorToolbarImageForm #Image,
#Form_EditorToolbarFlashForm #Flash {
	margin: 5px;
}
#Form_EditorToolbarImageForm fieldset label.left,
#Form_EditorToolbarFlashForm fieldset label.left, 
#Form_EditorToolbarLinkForm fieldset label.left {
	float:left;
	margin-left:0px;
	color: #666;
	line-height: 1.2;
	font-size: 11px;
	width: 190px;
}
#Form_EditorToolbarImageForm fieldset div.middleColumn,
#Form_EditorToolbarFlashForm fieldset div.middleColumn,
#Form_EditorToolbarLinkForm fieldset div.middleColumn {
	float: left;
}
#Form_EditorToolbarLinkForm fieldset li div.middleColumn,
#Form_EditorToolbarFlashForm fieldset li div.middleColumn,
#Form_EditorToolbarImageForm fieldset li div.middleColumn {
	float: none;
}

#Form_EditorToolbarImageForm fieldset div.fieldgroupField,
#Form_EditorToolbarFlashForm fieldset div.fieldgroupField,
#Form_EditorToolbarLinkForm fieldset div.fieldgroupField {
	display: inline;
}


#Form_EditorToolbarImageForm_Width,
#Form_EditorToolbarImageForm_Height,
#Form_EditorToolbarFlashForm_Width,
#Form_EditorToolbarFlashForm_Height {
	outline: 3px solid #E9E9E9;
}

#Form_EditorToolbarImageForm #Image img,
#Form_EditorToolbarFlashForm #Flash img {
	border: 2px solid #e4e3e3;
}
#contentPanel div.Actions {
	margin: 2px 5px 0 0;
	text-align: right;
}
#contentPanel #Image a.selectedImage img,
#contentPanel #Flash a.selectedFlash img {
	border: 2px solid #222;
}
 /* going to use this */
#BlankImage {
	text-indent: -9000px;

}

/**
 * Messages (see sapphire/css/Form.css)
 */
.message {
	margin: 1em 0;
	padding: 0.5em;
	font-weight: bold;
	border: 1px black solid;
	background-color: #B9FFB9;
	border-color: #00FF00;
}
	.message.notice {
		background-color: #FCFFDF;
		border-color: #FF9300;
	}
	
	.message.warning {
		background-color: #FFD2A6;
		border-color: #FF9300;
	}
	.message.bad {
		background-color: #FF8080;
		border-color: #FF0000;
	}

